--- a/BarCodeSystem/ProductDispatch/FlowCard/FlowCard_Page.xaml
+++ b/BarCodeSystem/ProductDispatch/FlowCard/FlowCard_Page.xaml
@@ -54,11 +54,11 @@
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition Width="2*"></ColumnDefinition>
+                        <ColumnDefinition Width="3*"></ColumnDefinition>
                         <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition Width="2*"></ColumnDefinition>
+                        <ColumnDefinition Width="3*"></ColumnDefinition>
                         <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition Width="2*"></ColumnDefinition>
+                        <ColumnDefinition Width="3*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Row="1" Text="流转卡类型:" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5"></TextBlock>
                     <ComboBox VerticalAlignment="Center" SelectedIndex="0" ItemsSource="{Binding}"  Grid.Row="1"  Name="cb_FlowCardType" Grid.Column="1" Margin="0 0 20 0">
@@ -68,15 +68,15 @@
                     <TextBox Name="txtb_FlowCode" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"   IsReadOnly="True" Text="系统自动生成" TextAlignment="Center" Background="LightGray" TextWrapping="Wrap" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left"></TextBox>
 
                     <TextBlock Text="产品:" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5"></TextBlock>
-                    <StackPanel  Grid.Column="3" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
-                        <TextBox  VerticalAlignment="Center" Name="txtb_ItemInfo" Text="来自生产订单" IsReadOnly="True" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" BorderBrush="White"></TextBox>
+                    <StackPanel  Grid.Column="3" Orientation="Horizontal" VerticalAlignment="Center" >
+                        <TextBox  TextWrapping="Wrap" TextChanged="txtb_ItemInfo_TextChanged" VerticalAlignment="Center" Name="txtb_ItemInfo" Text="来自生产订单" IsReadOnly="True" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" BorderBrush="White"></TextBox>
                         <!--<Button Name="btn_ItemSearch" Cursor="Hand" Click="btn_ItemSearch_Click" Style="{StaticResource btn_SearchStyle}"  Background="White" BorderBrush="White">
                             <Image Height="15" Source="../../Images/Zoom.ico"></Image>
                         </Button>-->
                     </StackPanel>
 
 
-                    <TextBlock  Text="工艺路线版本:" Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5"></TextBlock>
+                    <TextBlock TextWrapping="Wrap" Text="工艺路线版本:" Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Right" ></TextBlock>
                     <StackPanel Grid.Column="5" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
                         <TextBox  VerticalAlignment="Center" Name="txtb_TechRouteVersion" IsReadOnly="True" Text="点击放大镜选择" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
                         <Button Cursor="Hand" Style="{StaticResource btn_SearchStyle}" Click="btn_TechRouteSearch_Click" Name="btn_TechRouteSearch"  Background="White" BorderBrush="White">
@@ -85,7 +85,7 @@
                     </StackPanel>
 
                     <TextBlock Text="编制日期:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Grid.Row="1"></TextBlock>
-                    <DatePicker Name="datepicker_CreateDate"  Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" Cursor="Hand" Grid.Column="3" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center"></DatePicker>
+                    <DatePicker  Name="datepicker_CreateDate"  Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" Cursor="Hand" Grid.Column="3" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center"></DatePicker>
 
                     <TextBlock Text="生产车间:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="4" Grid.Row="1"></TextBlock>
                     <StackPanel Grid.Column="5" Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
@@ -113,7 +113,7 @@
                         </TextBox.ToolTip>
                     </TextBox>
 
-                    <TextBlock Text="分批来源流转卡:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="4" Grid.Row="2"></TextBlock>
+                    <TextBlock TextWrapping="Wrap"  Text="分批来源流转卡:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="4" Grid.Row="2"></TextBlock>
                     <StackPanel Grid.Column="5" Grid.Row="2" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
                         <TextBox  VerticalAlignment="Center" IsReadOnly="True" Text="分批流转卡专项" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
                         <Button Cursor="Hand" Style="{StaticResource btn_SearchStyle}" Name="btn_SoureFlowCardSearch" Background="White" BorderBrush="White">
@@ -157,30 +157,34 @@
 
                     <Image Name="img_Watermark" Source="../../Images/FlowCardWatermark.png" Panel.ZIndex="0" 
                            VerticalAlignment="Bottom" HorizontalAlignment="Center" Width="300" Height="100"></Image>
-                    <DataGrid  CanUserReorderColumns="False" CanUserSortColumns="False" CanUserAddRows="False" 
-                               AutoGenerateColumns="False" ColumnWidth="Auto" Name="datagrid_TechRouteInfo" RowHeaderWidth="30">
+                    <DataGrid ClipboardCopyMode="None"  CanUserDeleteRows="True" CanUserReorderColumns="False" CanUserSortColumns="False" CanUserAddRows="False" 
+                               AutoGenerateColumns="False" ColumnWidth="Auto" Name="datagrid_TechRouteInfo" 
+                               RowHeaderWidth="30">
                         <DataGrid.Columns >
                             <DataGridTextColumn Header="行号" IsReadOnly="True" Binding="{Binding Path=TR_ProcessSequence}"></DataGridTextColumn>
                             <DataGridTextColumn Header="工序名称" IsReadOnly="True" Binding="{Binding Path=TR_ProcessName}"></DataGridTextColumn>
                             <DataGridTemplateColumn  Header="操作工">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBlock Text="{Binding Path=personName}" Name="textb_Person" VerticalAlignment="Center"  ></TextBlock>
+                                        <TextBlock  TextWrapping="Wrap" Text="{Binding Path=personName}" Name="textb_Person" VerticalAlignment="Center"  ></TextBlock>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                                 <DataGridTemplateColumn.CellEditingTemplate>
                                     <DataTemplate>
-                                        <StackPanel  Orientation="Horizontal" VerticalAlignment="Center" >
-                                            <TextBox Width="80" Text="{Binding Path=personName,Mode=TwoWay}" VerticalAlignment="Center" ></TextBox>
-                                            <Button Name="btn_PersonSearch" Cursor="Hand" Click="btn_PersonSearch_Click" Style="{StaticResource btn_SearchStyle}"  Background="White" BorderBrush="White">
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition></ColumnDefinition>
+                                                <ColumnDefinition Width="15"></ColumnDefinition>
+                                            </Grid.ColumnDefinitions>
+                                            <TextBox Name="txtb_personName" TextWrapping="Wrap" Text="{Binding Path=personName,Mode=TwoWay}"  VerticalAlignment="Center" ></TextBox>
+                                            <Button Name="btn_PersonSearch" Grid.Column="1" Cursor="Hand" Click="btn_PersonSearch_Click" Style="{StaticResource btn_SearchStyle}"  Background="White" BorderBrush="White">
                                                 <Image Height="15" Source="../../Images/Zoom.ico"></Image>
                                             </Button>
-                                        </StackPanel>
+                                        </Grid>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellEditingTemplate>
                             </DataGridTemplateColumn>
                             <DataGridTextColumn Header="投入数"></DataGridTextColumn>
-
                             <DataGridTextColumn Header="合格数"></DataGridTextColumn>
                             <DataGridTextColumn Header="报废数"></DataGridTextColumn>
                             <DataGridTextColumn Header="责废数"></DataGridTextColumn>
@@ -203,7 +207,11 @@
                             <ColumnDefinition></ColumnDefinition>
                             <ColumnDefinition></ColumnDefinition>
                         </Grid.ColumnDefinitions>
-                        <Button Content="保存为班组" Name="btn_SaveAsTeam" Click="btn_SaveAsTeam_Click" VerticalAlignment="Center" HorizontalAlignment="Center"></Button>
+                        <Button Content="保存为班组" Name="btn_SaveAsTeam" Click="btn_SaveAsTeam_Click" VerticalAlignment="Center" HorizontalAlignment="Center">
+                            <Button.ToolTip>
+                                <ToolTip Name="tooltip_SaveAsTeam" Visibility="Hidden" Content="请选择一行记录！"></ToolTip>
+                            </Button.ToolTip>
+                        </Button>
                         <Button Content="选取班组" Grid.Column="1" Name="btn_GetTeam" Click="btn_GetTeam_Click" VerticalAlignment="Center" HorizontalAlignment="Center"></Button>
                         <Button Content="选取派工方案" Name="btn_GetDisPlan" Click="btn_GetDisPlan_Click" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="2"></Button>
                         <Button Name="btn_DisFlowCard" Click="btn_DisFlowCard_Click" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Center" Content="生成流转卡编号并派工" ></Button>
@@ -215,7 +223,7 @@
                 <GroupBox.Header>
                     <TextBlock  Style="{StaticResource textb_NormalStyle}">流转卡质量信息</TextBlock>
                 </GroupBox.Header>
-                <DataGrid ColumnWidth="Auto" RowHeaderWidth="30">
+                <DataGrid ClipboardCopyMode="None" ColumnWidth="Auto" RowHeaderWidth="30">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="行号"></DataGridTextColumn>
                         <DataGridTextColumn Header="工序行号"></DataGridTextColumn>
