--- a/BarCodeSystem/BasicFile/Organization/OrgInfoModify_Window.xaml
+++ b/BarCodeSystem/BasicFile/Organization/OrgInfoModify_Window.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                                 xmlns:namespc="clr-namespace:BarCodeSystem"
         WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
-        Title="组织信息修改窗口" Height="600" Width="600" Loaded="Window_Loaded">
+        Height="600" Width="600" Loaded="Window_Loaded">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="60"></RowDefinition>
