--- a/BarCodeSystem/ProductDispatch/FlowCard/FlowCard_Page.xaml
+++ b/BarCodeSystem/ProductDispatch/FlowCard/FlowCard_Page.xaml
@@ -14,7 +14,7 @@
     <Page.Resources>
         <local:TrueOrFalseConverter x:Key="boolConvert"></local:TrueOrFalseConverter>
     </Page.Resources>
-    <Grid>
+    <Grid Name="fatherGrid">
         <Grid.RowDefinitions>
             <RowDefinition Height="30"></RowDefinition>
             <RowDefinition Height="2*"></RowDefinition>
@@ -22,7 +22,20 @@
             <RowDefinition Height="4*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
-        <Label >
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*"></ColumnDefinition>
+            <ColumnDefinition Width="15"></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <GridSplitter Grid.Column="1" Grid.Row="1" Grid.RowSpan="4" VerticalAlignment="Stretch" HorizontalAlignment="Center" Width="5" Foreground="LightBlue"></GridSplitter>
+        <GroupBox Name="gb_SearchInfo" Margin="5" Grid.Row="1" Grid.Column="2" Grid.RowSpan="4">
+            <GroupBox.Header>
+                <TextBlock Name="textb_SearchInfo"  Style="{StaticResource textb_NormalStyle}" FontFamily="华文行楷"></TextBlock>
+            </GroupBox.Header>
+            <!--<Frame Name="frame_SearchInfo" JournalOwnership="OwnsJournal" ></Frame>-->
+        </GroupBox>
+
+        <Label Grid.ColumnSpan="3">
             <TextBlock FontSize="15" Foreground="White">流转卡编制页面</TextBlock>
             <Label.Background>
                 <LinearGradientBrush>
@@ -35,12 +48,6 @@
         </Label>
         <GridSplitter Grid.Row="2" Height="5" Foreground="AliceBlue" VerticalAlignment="Center" HorizontalAlignment="Stretch"></GridSplitter>
         <Grid Grid.Row="1" >
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*"></ColumnDefinition>
-                <ColumnDefinition Width="15"></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-            <GridSplitter Grid.Column="1" Width="5" Foreground="AliceBlue" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></GridSplitter>
             <GroupBox Name="gb_header" >
                 <GroupBox.Header>
                     <TextBlock  Style="{StaticResource textb_NormalStyle}" >流转卡表头信息</TextBlock>
@@ -54,11 +61,11 @@
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition Width="3*"></ColumnDefinition>
+                        <ColumnDefinition Width="2*"></ColumnDefinition>
                         <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition Width="3*"></ColumnDefinition>
+                        <ColumnDefinition Name="fourthCol"  Width="3*"></ColumnDefinition>
                         <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition Width="3*"></ColumnDefinition>
+                        <ColumnDefinition Width="2*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Row="1" Text="流转卡类型:" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5"></TextBlock>
                     <ComboBox VerticalAlignment="Center" SelectedIndex="0" ItemsSource="{Binding}"  Grid.Row="1"  Name="cb_FlowCardType" Grid.Column="1" Margin="0 0 20 0">
@@ -69,12 +76,12 @@
 
                     <TextBlock Text="产品:" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5"></TextBlock>
                     <StackPanel  Grid.Column="3" Orientation="Horizontal" VerticalAlignment="Center" >
-                        <TextBox  TextWrapping="Wrap" TextChanged="txtb_ItemInfo_TextChanged" VerticalAlignment="Center" Name="txtb_ItemInfo" Text="来自生产订单" IsReadOnly="True" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" BorderBrush="White"></TextBox>
+                        <TextBox  TextWrapping="Wrap" TextChanged="txtb_ItemInfo_TextChanged" VerticalAlignment="Center" Name="txtb_ItemInfo" Text="来自生产订单" IsReadOnly="True" 
+                                  Width="{Binding Path=ActualWidth,ElementName=fourthCol}" BorderBrush="White"></TextBox>
                         <!--<Button Name="btn_ItemSearch" Cursor="Hand" Click="btn_ItemSearch_Click" Style="{StaticResource btn_SearchStyle}"  Background="White" BorderBrush="White">
                             <Image Height="15" Source="../../Images/Zoom.ico"></Image>
                         </Button>-->
                     </StackPanel>
-
 
                     <TextBlock TextWrapping="Wrap" Text="工艺路线版本:" Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Right" ></TextBlock>
                     <StackPanel Grid.Column="5" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
@@ -85,14 +92,14 @@
                     </StackPanel>
 
                     <TextBlock Text="编制日期:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Grid.Row="1"></TextBlock>
-                    <DatePicker  Name="datepicker_CreateDate"  Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" Cursor="Hand" Grid.Column="3" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center"></DatePicker>
+                    <DatePicker  Name="datepicker_CreateDate"  Width="{Binding Path=ActualWidth,ElementName=fourthCol}" Cursor="Hand" Grid.Column="3" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center"></DatePicker>
 
                     <TextBlock Text="生产车间:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="4" Grid.Row="1"></TextBlock>
                     <StackPanel Grid.Column="5" Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
-                        <TextBox Name="txtb_Department" VerticalAlignment="Center" IsReadOnly="True" Text="点击放大镜选择" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
-                        <Button Cursor="Hand" Style="{StaticResource btn_SearchStyle}" Name="btn_WorkCenterSearch" Background="White" BorderBrush="White">
+                        <TextBox Name="txtb_Department" VerticalAlignment="Center" IsReadOnly="True" Text="系统自动生成" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
+                        <!--<Button Cursor="Hand" Style="{StaticResource btn_SearchStyle}" Name="btn_WorkCenterSearch" Background="White" BorderBrush="White">
                             <Image Height="15" Source="../../Images/Zoom.ico"></Image>
-                        </Button>
+                        </Button>-->
                     </StackPanel>
 
                     <TextBlock Text="生产订单:" VerticalAlignment="Center" HorizontalAlignment="Right"  Grid.Row="2"></TextBlock>
@@ -105,7 +112,7 @@
                     </StackPanel>
 
                     <TextBlock Text="派工数量:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2"  Grid.Row="2"></TextBlock>
-                    <TextBox  Background="LightGray"  Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" 
+                    <TextBox    Width="{Binding Path=ActualWidth,ElementName=fourthCol}" 
                               Name="textb_Amount" Grid.Column="3" Grid.Row="2" VerticalAlignment="Center" 
                               HorizontalAlignment="Left" TextChanged="textb_Amount_TextChanged">
                         <TextBox.ToolTip>
@@ -113,38 +120,27 @@
                         </TextBox.ToolTip>
                     </TextBox>
 
-                    <TextBlock TextWrapping="Wrap"  Text="分批来源流转卡:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="4" Grid.Row="2"></TextBlock>
+                    <!--<TextBlock TextWrapping="Wrap"  Text="分批来源流转卡:" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="4" Grid.Row="2"></TextBlock>
                     <StackPanel Grid.Column="5" Grid.Row="2" Orientation="Horizontal" VerticalAlignment="Center" Height="30">
                         <TextBox  VerticalAlignment="Center" IsReadOnly="True" Text="分批流转卡专项" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}"  BorderBrush="White"></TextBox>
                         <Button Cursor="Hand" Style="{StaticResource btn_SearchStyle}" Name="btn_SoureFlowCardSearch" Background="White" BorderBrush="White">
                             <Image Height="15" Source="../../Images/Zoom.ico"></Image>
                         </Button>
-                    </StackPanel>
+                    </StackPanel>-->
 
                     <TextBlock Text="编制人员:" VerticalAlignment="Center" HorizontalAlignment="Right"  Grid.Row="3"></TextBlock>
                     <TextBlock Background="LightGray" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" Name="textb_CreatedBy" Grid.Column="1" Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Left"></TextBlock>
 
                     <TextBlock Text="审核人员:" VerticalAlignment="Center" HorizontalAlignment="Right"  Grid.Column="2" Grid.Row="3"></TextBlock>
-                    <TextBlock Background="LightGray" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" Name="textb_CheckedBy" Grid.Column="3" Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Left"></TextBlock>
+                    <TextBlock Background="LightGray" Width="{Binding Path=ActualWidth,ElementName=fourthCol}" Name="textb_CheckedBy" Grid.Column="3" Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Left"></TextBlock>
 
                     <TextBlock Text="流转卡状态:" VerticalAlignment="Center" HorizontalAlignment="Right"  Grid.Column="4" Grid.Row="3"></TextBlock>
                     <TextBlock Text="开立" Background="LightGray" Width="{Binding Path=ActualWidth,ElementName=cb_FlowCardType}" Name="textb_CardState" Grid.Column="5" Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Left"></TextBlock>
                 </Grid>
             </GroupBox>
-            <GroupBox Name="gb_SearchInfo" Grid.Column="2">
-                <GroupBox.Header>
-                    <TextBlock Name="textb_SearchInfo"  Style="{StaticResource textb_NormalStyle}" FontFamily="华文行楷"></TextBlock>
-                </GroupBox.Header>
-                <!--<Frame Name="frame_SearchInfo" JournalOwnership="OwnsJournal" ></Frame>-->
-            </GroupBox>
         </Grid>
 
         <Grid Grid.Row="3">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*"></ColumnDefinition>
-                <ColumnDefinition Width="15"></ColumnDefinition>
-                <ColumnDefinition ></ColumnDefinition>
-            </Grid.ColumnDefinitions>
             <GroupBox >
                 <GroupBox.Header>
                     <TextBlock  Style="{StaticResource textb_NormalStyle}" >流转卡行表信息</TextBlock>
@@ -156,14 +152,19 @@
                     </Grid.RowDefinitions>
 
                     <Image Name="img_Watermark" Source="../../Images/FlowCardWatermark.png" Panel.ZIndex="0" 
-                           VerticalAlignment="Bottom" HorizontalAlignment="Center" Width="300" Height="100"></Image>
-                    <DataGrid ClipboardCopyMode="None"  CanUserDeleteRows="True" CanUserReorderColumns="False" CanUserSortColumns="False" CanUserAddRows="False" 
-                               AutoGenerateColumns="False" ColumnWidth="Auto" Name="datagrid_TechRouteInfo" 
-                               RowHeaderWidth="30">
+                           VerticalAlignment="Center" HorizontalAlignment="Center" Width="300" Height="100"></Image>
+                    <DataGrid ClipboardCopyMode="None" CanUserDeleteRows="False"   CanUserReorderColumns="False" CanUserSortColumns="False" 
+                              CanUserAddRows="False" AutoGenerateColumns="False" ColumnWidth="Auto" Name="datagrid_TechRouteInfo"  
+                              RowHeaderWidth="30" >
+                        <DataGrid.ContextMenu>
+                            <ContextMenu>
+                                <MenuItem Name="item_DeleteRow" Header="删除选中行" Click="item_DeleteRow_Click"></MenuItem>
+                            </ContextMenu>
+                        </DataGrid.ContextMenu>
                         <DataGrid.Columns >
                             <DataGridTextColumn Header="行号" IsReadOnly="True" Binding="{Binding Path=TR_ProcessSequence}"></DataGridTextColumn>
                             <DataGridTextColumn Header="工序名称" IsReadOnly="True" Binding="{Binding Path=TR_ProcessName}"></DataGridTextColumn>
-                            <DataGridTemplateColumn  Header="操作工">
+                            <DataGridTemplateColumn MaxWidth="300" Header="操作工">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <TextBlock  TextWrapping="Wrap" Text="{Binding Path=personName}" Name="textb_Person" VerticalAlignment="Center"  ></TextBlock>
@@ -206,31 +207,19 @@
                             <ColumnDefinition></ColumnDefinition>
                             <ColumnDefinition></ColumnDefinition>
                             <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
                         </Grid.ColumnDefinitions>
-                        <Button Content="保存为班组" Name="btn_SaveAsTeam" Click="btn_SaveAsTeam_Click" VerticalAlignment="Center" HorizontalAlignment="Center">
+                        <Button Content="保存为派工方案" Name="btn_SaveAsDisPlan" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" Click="btn_SaveAsDisPlan_Click"></Button>
+                        <Button Content="保存为班组"  Name="btn_SaveAsTeam" Click="btn_SaveAsTeam_Click" VerticalAlignment="Center" HorizontalAlignment="Center">
                             <Button.ToolTip>
                                 <ToolTip Name="tooltip_SaveAsTeam" Visibility="Hidden" Content="请选择一行记录！"></ToolTip>
                             </Button.ToolTip>
                         </Button>
                         <Button Content="选取班组" Grid.Column="1" Name="btn_GetTeam" Click="btn_GetTeam_Click" VerticalAlignment="Center" HorizontalAlignment="Center"></Button>
-                        <Button Content="选取派工方案" Name="btn_GetDisPlan" Click="btn_GetDisPlan_Click" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="2"></Button>
-                        <Button Name="btn_DisFlowCard" Click="btn_DisFlowCard_Click" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Center" Content="生成流转卡编号并派工" ></Button>
+                        <Button Content="选取派工方案" Name="btn_GetDisPlan" Click="btn_GetDisPlan_Click" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="3"></Button>
+                        <Button Name="btn_DisFlowCard" Click="btn_DisFlowCard_Click" Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Center" Content="生成编号并派工" ></Button>
                     </Grid>
                 </Grid>
-            </GroupBox>
-            <GridSplitter Grid.Column="1" Width="5" Foreground="AliceBlue" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></GridSplitter>
-            <GroupBox  Grid.Column="2">
-                <GroupBox.Header>
-                    <TextBlock  Style="{StaticResource textb_NormalStyle}">流转卡质量信息</TextBlock>
-                </GroupBox.Header>
-                <DataGrid ClipboardCopyMode="None" ColumnWidth="Auto" RowHeaderWidth="30">
-                    <DataGrid.Columns>
-                        <DataGridTextColumn Header="行号"></DataGridTextColumn>
-                        <DataGridTextColumn Header="工序行号"></DataGridTextColumn>
-                        <DataGridTextColumn Header="报废数量"></DataGridTextColumn>
-                        <DataGridTextColumn Header="报废原因"></DataGridTextColumn>
-                    </DataGrid.Columns>
-                </DataGrid>
             </GroupBox>
         </Grid>
     </Grid>
